# hackathon-dapp

./: README.md  package-lock.json  package.json
contracts/: .gitignore  Untitled-2023-03-19-1347.excalidraw  dao notes.xopp
contracts/org/: Cargo.toml  lib.rs
contracts/project/: Cargo.toml  lib.rs
contracts/project_proposal/: Cargo.toml  lib.rs
contracts/proposal/: Cargo.toml  lib.rs
src/: App.css  App.tsx
src/Pages/: AddMember.tsx  Card.tsx  GetMember.tsx  Header.js  Login.tsx  Org.css  Org.tsx  Project.tsx  Projects.tsx  Proposal.tsx  SideBarData.tsx
src/Pages/Org/: Card.css  Card.tsx  Header.tsx  ListRow.tsx  ProjectList.css  ProjectList.js  ProjectList.tsx  Secretory.css  Secretory.tsx  SideBarData.tsx  SidePanel.css
src/Pages/Project/: AddMember.tsx  Header.css  Header.tsx  ListRow.css  ProjectInfo.tsx  ProjectMembers.tsx  ProjectTasks.tsx  SideBarData.tsx  SidePanel.tsx
src/context/: ApiContext.tsx
