[package]
name = "project"
version = "0.1.0"
authors = ["adarsh"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "4.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }



[dev-dependencies]

[lib]
name = "project"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    # Used for ABI generation.
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",

]
ink-as-dependency = []
e2e-tests = []

